Change autoconf pre-req to 2.68 (for Ubuntu 12.04). Default to C++. Added check for boost headers. libtool macros are now stored in m4 directory.

--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-AC_PREREQ([2.69])
+AC_PREREQ([2.68])
 AC_INIT([MonkVG], [1.1],[] )
 AC_CONFIG_SRCDIR([glu/libtess/dict.c])
 
@@ -9,13 +9,21 @@ AC_CONFIG_SRCDIR([glu/libtess/dict.c])
 LT_INIT
 AM_INIT_AUTOMAKE([foreign])
 AC_PROG_CXX
+# Default to using C++
+AC_LANG([C++])
+
 # Checks for libGL
+AC_CHECK_HEADERS([GL/gl.h GL/glu.h  GL/glew.h],[],[AC_MSG_FAILURE(Need OpenGL)])
 
-AC_CHECK_HEADERS([ GL/gl.h GL/glu.h  GL/glew.h],[],[AC_MSG_FAILURE(need OpenGL)])
+# Checks for boost c++ libs
+AC_CHECK_HEADERS([boost/ptr_container/ptr_map.hpp],[],[AC_MSG_FAILURE(Need Boost C++ Libraries)])
 
-AC_CHECK_LIB(GL,glFlush, [], [AC_MSG_FAILURE(need OpenGL Library)])
-AC_CHECK_LIB(GLU,gluTessBeginPolygon, [], [AC_MSG_FAILURE(need OpenGL Utility Library )])
-AC_CHECK_LIB(GLEW,glOrtho, [], [AC_MSG_FAILURE(need OpenGL Extension Wrangler Library)])
+AC_CHECK_LIB(GL,glFlush, [], [AC_MSG_FAILURE(Need OpenGL Library - libGL)])
+AC_CHECK_LIB(GLU,gluTessBeginPolygon, [], [AC_MSG_FAILURE(Need OpenGL Utility Library - libGLU)])
+AC_CHECK_LIB(GLEW,glOrtho, [], [AC_MSG_FAILURE(Need OpenGL Extension Wrangler Library - libGLEW)])
+
+# Keep the correct libtool macros in-tree
+AC_CONFIG_MACRO_DIR([m4])
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
